# uplay-r1-loader

./: Cargo.toml  README.md  Uplay.toml  build.rs  rustfmt.toml
src/: consts.rs  global.rs  lib.rs  loader.rs
src/exports/: ach.rs  avatar.rs  common.rs  friends.rs  installer.rs  metadata.rs  mod.rs  options.rs  overlay.rs  party.rs  presence.rs  save.rs  user.rs  win.rs
src/helpers/: alloc.rs  manifest.rs  mod.rs  save.rs
src/models/: config.rs  manifest.rs  mod.rs
src/types/: key.rs  list.rs  mod.rs  overlapped.rs  save.rs
