[package]
name = "uplay_r1_loader"
version = "0.1.0"
authors = ["Tron0xHEX <dm.fl.worker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ctor = "0.1"
serde = "1.0"
serde_derive = "1.0"
log-panics = "2.0"
simplelog = "0.11"
log = "0.4"
fnlog = "0.1"
stdext = "0.3"
toml = "0.5"
once_cell = "1.8"
parking_lot = "0.11"
detour = { version = "0.8", default-features = false }
winapi = { version = "0.3", features = ["libloaderapi"] }
native-dialog = "0.6"
dirs = "4.0"
anyhow = "1.0"
if_chain = "1.0"
ustr = "0.8"

[build-dependencies]
regex = "1.4"
voca_rs = "1.13"
anyhow = "1.0"

[lib]
name = "loader"
crate-type = ["cdylib"]

[profile.release]
lto = "fat"
opt-level = "s"
codegen-units = 1
